# fpy

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GOTCHAS.md  README.md  SPEC.md  VERSIONING.md  check.fpy  pyproject.toml
.github/actions/spelling/: expect.txt
.github/workflows/: fprime-gds-tests.yml
src/fpy/: PASSES.md  SPEC.md  __init__.py  codegen.py  codegen_fpybc.py  codegen_llvm.py  compiler.py  desugaring.py  dictionary.py  error.py  grammar.lark  ir.py  llvm_backend.py  macros.py  main.py  model.py  semantics.py  state.py  symbols.py  syntax.py  test_helpers.py  types.py  visitors.py
src/fpy/builtin/: time.fpy
src/fpy/bytecode/: SPEC.md  assembler.py  directives.py  grammar.lark
test/: conftest.py
test/fpy/: RefTopologyDictionary.json  test_anon_exprs.py  test_arithmetic.py  test_assembler.py  test_assert.py  test_boolean_logic.py  test_bug_repros.py  test_check.py  test_commands.py  test_comparisons.py  test_compiler_config.py  test_control_flow.py  test_depend.py  test_dictionary.py  test_dictionary_config.py  test_functions.py  test_fw_type_aliases.py  test_golden.py  test_integration.py  test_llvm_backend.py  test_logging.py  test_main.py  test_model.py  test_parsing.py  test_rng.py  test_seq_calling.py  test_seqs.py  test_sequence_args.py  test_sequence_metadata.py  test_telemetry.py  test_time_seqs.py  test_types_and_constructors.py  test_types_visitors.py  test_variables.py  test_wasm.py
test/fpy/golden/: check_simple.fpy  check_simple.fpybc  cmd_handled.fpy  (+17 more)
test/spacewasm_runner/: Cargo.toml
test/spacewasm_runner/src/: main.rs
